--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@ body {
   font-family: var(--font-raleway);
 }
 
+/*50px*/
 .text_type_big {
   font-size: 3.472vw;
   line-height: normal;
@@ -51,6 +52,7 @@ body {
   line-height: normal;
 }
 
+/*8px*/
 .text_type_1x {
   font-size: 0.55vw;
   line-height: 150%;
@@ -58,12 +60,13 @@ body {
 }
 
 @media (max-width: 1024px) {
-  .text_type_1x {
+  /*8px*/
+  .text_type_1x__mobile {
     font-size: 2.133vw;
     line-height: 150%;
   }
   /*12px*/
-  .text_type_1_5x {
+  .text_type_1_5x__mobile {
     font-size: 3.2vw;
     line-height: 150%;
   }
