--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,24 @@ body {
   font-family: var(--font-raleway);
 }
 
+.spin_loader {
+  padding: .5vw;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: white;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
 /*50px*/
 .text_type_big {
   font-size: 3.472vw;
